Actually fixed opening thr mods folder on macos. :kekez: